syntax = "proto2";

import "ssl_game_controller_common.proto";

package gameController;

// a registration that must be send by teams and autoRefs to the controller as the very first message
message TeamRegistration {
    // the exact team name as published by the game-controller
    required string team_name = 1;
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 2;
}

// wrapper for all messages from a team's computer to the controller
message TeamToController {
    // signature can optionally be specified to enable secure communication
    optional Signature signature = 1;

    oneof msg {
        // request a new desired keeper id
        // this is only allowed during STOP and will be rejected otherwise
        int32 desired_keeper = 2;
        // response to an advantage choice request
        AdvantageChoice advantage_choice = 3;
        // request to substitute a robot at the next possibility
        bool substitute_bot = 4;
        // send a ping to the GC to test if the connection is still open.
        // the value is ignored and a reply is sent back
        bool ping = 5;
    }
}

// the current advantage choice of the team
// the choice is valid until another choice is received
// if the team disconnects, the choice is reset to its default (STOP)
// teams may either send their current choice continuously or only on change
enum AdvantageChoice {
    // stop the game
    STOP = 0;
    // keep the game running
    CONTINUE = 1;
}

// wrapper for all messages from controller to a team's computer
message ControllerToTeam {
    // reserve obsolete field ids
    reserved 2;

    oneof msg {
        // a reply from the controller
        ControllerReply controller_reply = 1;
    }
}
